2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-fold.c (OP_BINARY_SIS): Signal out of memory.
	(EMUL_SIS): Use malloc instead of xmalloc.
	(OP_BINARY_SSS): Call PKL_PASS_ERROR after PKL_ICE.
	* libpoke/pkl-trans.c (pkl_trans1_ps_format): Likewise.
	(pkl_trans2_ps_incdecr): Likewise.
	* libpoke/pkl-trans.c (XSTRDUP): Likewise.
	(XMALLOC): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_func): Likewise.

2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c: Likewise.

	* libpoke/pkl-fold.c: Do not include xalloc.h.

	* libpoke/pkl-tab.y: Do not include xalloc.h.
	* libpoke/pkl-trans.c: Do not include xalloc.h.
	(XSTRDUP): Define.
	(XMALLOC): Likewise.

2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING: Regenerate.
	* etc/poke-gdb.scm: Remove file.
	* doc/pokeint.texi (Using GDB extensions): Remove section.

2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/btf-ext.pk (BTF_Ext_Header): Improve constraint for
	`magic' so it handles endianness better.

2024-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (struct pkl_type): Remove unused field `name'
	from the `fun' struct.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c (pkl_ast_handle_bconc_ass_stmt): There is no
	more need to mark compound statement as frameless.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (struct pkl_gen_payload): Remove pasm2 and
	cur_pasm2 fields.
	(PKL_GEN_ASM2): Remove.
	(PKL_GEN_PUSH_ASM2): Likewise.
	(PKL_GEN_POP_ASM2): Likewise.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-help.pk: Add missing "dispatch" in synopsis for .vm.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (dup-wap-to-dup): New rewrite.
	(swap-tuck-to-over): Likewise.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_struct_type_field): Fix
	memory leak.

2024-09-20  Jose E. Marchesi  <jemarch@gnu.org>
